chore: la til ms-vscode.live-server som anbefalt utvidelse

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "bierner.comment-tagged-templates",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "ms-vscode.live-server"
   ]
 }
